# perf_data_converter

./: .bazelrc  .gitignore  .travis.yml  MODULE.bazel  Makefile  README.md  WORKSPACE  builder.h  perf_data_converter.cc  perf_data_converter_test.cc
.github/workflows/: ci.yaml
ci/: linux_clang-latest_libcxx_bazel.sh
quipper/: Makefile.external  perf_reader.cc  perf_reader.h
src/: .travis.yml  BUILD  Makefile  WORKSPACE  builder.cc  builder.h  int_compat.h  intervalmap.h  intervalmap_test.cc  path_matching.h  perf_data_converter.cc  perf_data_converter.h  perf_data_converter_test.cc  perf_data_handler.cc  perf_data_handler.h  perf_data_handler_test.cc  perf_to_profile.cc  perf_to_profile_lib.cc  perf_to_profile_lib.h  perf_to_profile_lib_test.cc  profile.proto  string_compat.h  test_compat.h
src/compat/: BUILD  int_compat.h  string_compat.h  test_compat.h
src/quipper/: BUILD  BUILD.gn  Makefile  Makefile.external  address_context.cc  address_context.h  address_mapper.cc  address_mapper.h  address_mapper_test.cc  arm_spe_decoder.cc  arm_spe_decoder.h  arm_spe_decoder_test.cc  binary_data_utils.cc  binary_data_utils.h  binary_data_utils_test.cc  buffer_reader.cc  buffer_reader.h  buffer_reader_test.cc  buffer_writer.cc  buffer_writer.h  buffer_writer_test.cc  conversion_utils.cc  conversion_utils.h  conversion_utils_test.cc  data_reader.cc  data_reader.h  data_writer.cc  data_writer.h  dso.cc  dso.h  dso_test.cc  dso_test_utils.cc  dso_test_utils.h  file_reader.cc  file_reader.h  file_reader_test.cc  file_utils.cc  file_utils.h  heap_profile_parser.cc  heap_profile_parser.h  (+60 more)
src/quipper/base/: logging.h
src/quipper/compat/: cleanup.h  log_level.cc  proto.h  thread.h
src/quipper/compat/cros/detail/: thread.h
src/quipper/compat/non_cros/detail/: thread.h
src/quipper/corpus/: PerfReader_ReadBuildIDMetadataWithoutHeader_heap_buffer_overflow  clusterfuzz-testcase-minimized-quipper_perf_reader_read_fuzzer-4883679740166144  poc-145fc46ec928e50d7116f6137a3a074bf5c6934c9ab07e3529d0e8e021e7481f  poc-15c4696aab8d47509154302563290062647df5c1d0156fb35382f62f22e86511  poc-1d0e6544b4addbadb2ff7c136962f7aab8e290a8275d4a46694758c4e75e7a13  poc-2125342715d182bd627e7e86e6843cf54654faeb336d0c07893fec760961d853  poc-2c02c3aa9fb2a613b65097e26fd182d748b0c81b9359a012b09cbe7a358d3ca2  poc-39297b2ac020d2cec6943a92cd44f1c148f43b8ba4640f1b95ca5ed97fd370d1  poc-3be2b745d86f9b6e8491a391f14200007b6841fb5c25b010752c87f1e53af9b5  poc-3c490f25d455ada2b2701674ac183d8abd7b1bccb687235e8e60d390b6c524a6  poc-4a52fdd4e9d5adcda85329e1f5fb6f425788e63cef41209f83bfd6edcfae4ff3  poc-56c11c81f1da85a4c5b898b6a9dd14c307b994ff02c6e98445ba22d2e8e957a7  poc-62e91c55617092aa82376846d050d7353ed899748d8e5990f381c2143d090e53  poc-66e69c581f80fbfd89c6769ae588cd0920f815d6675686c9b77fbd5cb23940e5  poc-6811aac63baf66b46afe603c99b882dfeca9bda96e0c0fc6ba9d807ae9370309  poc-6b01a0404c8a3eb444fad4d88fe4fdd3d6a5b4882c5c77c9f12756983325d3e4  poc-7bef7f895afc2ab06ed34b6ab7a961edac3c6ef0ff821a59a54f1e30a1ef3aa7  poc-8b38b630443e3d51347f427ec97a475a68ab3beeea5d52df41e5bbc6ad012999  poc-95cc7524c6b55c7d26365fdacc8a04e7a8aae7bb2ae2c367e08d2e2872212b9d  poc-abf23464321bf643602edfb45d6fa9ea39d571a5eff7299e567fe73d93234838  poc-ba8a4480ea231128f3d5515fdd75f4ff5d20e090a37f701608bd299aee1fb4bd  poc-c53034701abf35f2cb30d80ea967a540ad3d4eb208e17c78e7159f3df3dae191  poc-c895bf2ccfcc61dda638783feda6600e4e11a130285ab140faacb5d63399b4f4  poc-cea30a3a2372cd398b168517619019f49e7865e955ada87233242267f1bd3020  poc-d8b5768bcbbc2fbe0b5823623a84bb74a1c7bd832e66ecf598d3fc424ca34dc5  poc-da8445ae650c392d7e75ad11e72fd555d4df90ea7942206378209099fe640004-190120103501633075  poc-eebb35632622f4e6e07b2908a92de53ee73e9eb83c8c84bcb2cb81c1a3b46327  poc-fd76c99f4c02a1e3bc42ef962111a3b9991b8a0798746475e894185642eb6679
src/quipper/kernel/: perf_event.h  perf_internals.h
src/quipper/testdata/: perf.data.armv7-3.4.io.out.pb_data  perf.data.armv7-3.4.io.out.pb_text  perf.data.armv7-3.4.parse.out.pb_data  perf.data.armv7-3.4.parse.out.pb_text  perf.data.armv7-3.4.parse.remap.out.pb_data  perf.data.armv7-3.4.parse.remap.out.pb_text  perf.data.armv7-3.4.parse.remap2.out.pb_data  perf.data.armv7-3.4.parse.remap2.out.pb_text  perf.data.armv7-3.4.pb_data  perf.data.armv7-3.4.pb_text  perf.data.armv7-3.4.ser.comm.out.pb_data  perf.data.armv7-3.4.ser.comm.out.pb_text  perf.data.armv7-3.4.serialized.out.pb_data  perf.data.armv7-3.4.serialized.out.pb_text  perf.data.armv7.perf_3.14-3.8.io.out.pb_data  perf.data.armv7.perf_3.14-3.8.io.out.pb_text  perf.data.armv7.perf_3.14-3.8.parse.out.pb_data  perf.data.armv7.perf_3.14-3.8.parse.out.pb_text  perf.data.armv7.perf_3.14-3.8.parse.remap.out.pb_data  perf.data.armv7.perf_3.14-3.8.parse.remap.out.pb_text  perf.data.armv7.perf_3.14-3.8.parse.remap2.out.pb_data  perf.data.armv7.perf_3.14-3.8.parse.remap2.out.pb_text  perf.data.armv7.perf_3.14-3.8.pb_data  perf.data.armv7.perf_3.14-3.8.pb_text  perf.data.armv7.perf_3.14-3.8.ser.comm.out.pb_data  perf.data.armv7.perf_3.14-3.8.ser.comm.out.pb_text  perf.data.armv7.perf_3.14-3.8.serialized.out.pb_data  perf.data.armv7.perf_3.14-3.8.serialized.out.pb_text  perf.data.branch-4.14  perf.data.branch-4.14.buildids  perf.data.branch-4.14.io.out.pb_data  perf.data.branch-4.14.io.out.pb_text  perf.data.branch-4.14.parse.out.pb_data  perf.data.branch-4.14.parse.out.pb_text  perf.data.branch-4.14.parse.remap.out.pb_data  perf.data.branch-4.14.parse.remap.out.pb_text  perf.data.branch-4.14.parse.remap2.out.pb_data  perf.data.branch-4.14.parse.remap2.out.pb_text  perf.data.branch-4.14.pb_data  perf.data.branch-4.14.pb_text  (+380 more)
src/testdata/: BUILD  multi-event-single-process.perf_data.pb  perf-address-context.textproto  perf-buildid-mmap-events.textproto  perf-buildid-stats.textproto  perf-callchain-non-pebs.pb_proto  perf-callchain-non-pebs.textproto  perf-callchain-pebs.pb_proto  perf-callchain-pebs.textproto  perf-cgroup-events.textproto  perf-code-data-page-sizes.textproto  perf-comm-and-task-comm.textproto  perf-cpu.textproto  perf-cros-kernel-3_18-mapping.pb_proto  perf-datasrc.textproto  (+20 more)
(+1 files in other folders)
