module(
    name = "perf_data_converter",
    version = "head",
    compatibility_level = 1,
)

# GoogleTest/GoogleMock framework. Used by most unit-tests.
bazel_dep(
    name = "googletest",
    version = "1.11.0",
    repo_name = "com_google_googletest",
)

# zlib, used by proto builders.
bazel_dep(
    name = "zlib",
    version = "1.3.1",
)

# Proto rules for Bazel and Protobuf
bazel_dep(
    name = "protobuf",
    version = "31.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "boringssl",
    version = "0.0.0-20240126-22d349c",
)
bazel_dep(
    name = "gflags",
    version = "2.2.2",
    repo_name = "com_github_gflags_gflags",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20250512.0",
)
