module(
    name = "perf_data_converter",
    version = "head",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.2.14")

# GoogleTest/GoogleMock framework. Used by most unit-tests.
bazel_dep(
    name = "googletest",
    version = "1.17.0.bcr.2",
    repo_name = "com_google_googletest",
)

# zlib, used by proto builders.
bazel_dep(
    name = "zlib",
    version = "1.3.1.bcr.5",
)

# Proto rules for Bazel and Protobuf
bazel_dep(
    name = "protobuf",
    version = "33.4",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "boringssl",
    version = "0.0.0-20240126-22d349c",
)
bazel_dep(
    name = "gflags",
    version = "2.2.2.bcr.1",
    repo_name = "com_github_gflags_gflags",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20250814.1",
)
